// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingScaleOverview Checks snapshot - with descriptions: withDescriptions 1`] = `
<div
  class="tui-competencyRatingScaleOverview"
>
  <p
    class="tui-competencyRatingScaleOverview__title"
    id="uid-1-rating-scale-title"
  >
    [[rating_scale, totara_competency]]
  </p>
  <ol
    aria-labelledby="uid-1-rating-scale-title"
    class="tui-competencyRatingScaleOverview__list"
  >
    
    <li
      class="tui-competencyRatingScaleOverview__list-item"
    >
      <div
        class="tui-competencyRatingScaleOverview__proficientStatus"
      >
        <check-success-stub
          size="200"
        />
      </div>
      <div
        class="tui-competencyRatingScaleOverview__scaleValue"
      >
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-name"
        >
          Extremely competent
        </p>
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-description"
        >
          <b>
            No doubt this fella is competent
          </b>
        </p>
        <span
          class="sr-only"
        >
          [[is_proficient_value, totara_competency]]
        </span>
      </div>
    </li>
    <li
      class="tui-competencyRatingScaleOverview__list-item"
    >
      <div
        class="tui-competencyRatingScaleOverview__proficientStatus"
      >
        <check-success-stub
          size="200"
        />
      </div>
      <div
        class="tui-competencyRatingScaleOverview__scaleValue"
      >
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-name"
        >
          Competent
        </p>
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-description"
        >
          <i>
            There is some merit co call it competent
          </i>
        </p>
        <span
          class="sr-only"
        >
          [[is_proficient_value, totara_competency]]
        </span>
      </div>
    </li>
    <li
      class="tui-competencyRatingScaleOverview__list-item"
    >
      <div
        class="tui-competencyRatingScaleOverview__proficientStatus"
      >
        <check-success-stub
          size="200"
        />
      </div>
      <div
        class="tui-competencyRatingScaleOverview__scaleValue"
      >
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-name"
        >
          Competent on Tuesdays
        </p>
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-description"
        >
          Competent, but only on Tuesdays, do not ask why.
        </p>
        <span
          class="sr-only"
        >
          [[is_proficient_value, totara_competency]]
        </span>
      </div>
    </li>
    <li
      class="tui-competencyRatingScaleOverview__list-item"
    >
      <div
        class="tui-competencyRatingScaleOverview__proficientStatus"
      >
        <check-success-stub
          size="200"
        />
      </div>
      <div
        class="tui-competencyRatingScaleOverview__scaleValue"
      >
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-name"
        >
          Not competent on Tuesdays
        </p>
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-description"
        >
          Not competent, but only on Tuesdays, do not ask why.
        </p>
        <span
          class="sr-only"
        >
          [[is_proficient_value, totara_competency]]
        </span>
      </div>
    </li>
    <li
      class="tui-competencyRatingScaleOverview__list-item"
    >
      <div
        class="tui-competencyRatingScaleOverview__proficientStatus"
      >
        <!--v-if-->
      </div>
      <div
        class="tui-competencyRatingScaleOverview__scaleValue"
      >
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-name"
        >
          Below average
        </p>
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-description"
        >
          We can not call it competent for just yet, maybe wait for Tuesday.
        </p>
        <span
          class="sr-only"
        >
          [[is_not_proficient_value, totara_competency]]
        </span>
      </div>
    </li>
    <li
      class="tui-competencyRatingScaleOverview__list-item"
    >
      <div
        class="tui-competencyRatingScaleOverview__proficientStatus"
      >
        <!--v-if-->
      </div>
      <div
        class="tui-competencyRatingScaleOverview__scaleValue"
      >
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-name"
        >
          Not competent
        </p>
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-description"
        >
          Why does this value even exist?
        </p>
        <span
          class="sr-only"
        >
          [[is_not_proficient_value, totara_competency]]
        </span>
      </div>
    </li>
    
  </ol>
</div>
`;

exports[`RatingScaleOverview Checks snapshot - without descriptions: withoutDescriptions 1`] = `
<div
  class="tui-competencyRatingScaleOverview"
>
  <p
    class="tui-competencyRatingScaleOverview__title"
    id="uid-1-rating-scale-title"
  >
    [[rating_scale, totara_competency]]
  </p>
  <ol
    aria-labelledby="uid-1-rating-scale-title"
    class="tui-competencyRatingScaleOverview__list"
  >
    
    <li
      class="tui-competencyRatingScaleOverview__list-item"
    >
      <div
        class="tui-competencyRatingScaleOverview__proficientStatus"
      >
        <check-success-stub
          size="200"
        />
      </div>
      <div
        class="tui-competencyRatingScaleOverview__scaleValue"
      >
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-name"
        >
          Extremely competent
        </p>
        <!--v-if-->
        <span
          class="sr-only"
        >
          [[is_proficient_value, totara_competency]]
        </span>
      </div>
    </li>
    <li
      class="tui-competencyRatingScaleOverview__list-item"
    >
      <div
        class="tui-competencyRatingScaleOverview__proficientStatus"
      >
        <check-success-stub
          size="200"
        />
      </div>
      <div
        class="tui-competencyRatingScaleOverview__scaleValue"
      >
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-name"
        >
          Competent
        </p>
        <!--v-if-->
        <span
          class="sr-only"
        >
          [[is_proficient_value, totara_competency]]
        </span>
      </div>
    </li>
    <li
      class="tui-competencyRatingScaleOverview__list-item"
    >
      <div
        class="tui-competencyRatingScaleOverview__proficientStatus"
      >
        <check-success-stub
          size="200"
        />
      </div>
      <div
        class="tui-competencyRatingScaleOverview__scaleValue"
      >
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-name"
        >
          Competent on Tuesdays
        </p>
        <!--v-if-->
        <span
          class="sr-only"
        >
          [[is_proficient_value, totara_competency]]
        </span>
      </div>
    </li>
    <li
      class="tui-competencyRatingScaleOverview__list-item"
    >
      <div
        class="tui-competencyRatingScaleOverview__proficientStatus"
      >
        <check-success-stub
          size="200"
        />
      </div>
      <div
        class="tui-competencyRatingScaleOverview__scaleValue"
      >
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-name"
        >
          Not competent on Tuesdays
        </p>
        <!--v-if-->
        <span
          class="sr-only"
        >
          [[is_proficient_value, totara_competency]]
        </span>
      </div>
    </li>
    <li
      class="tui-competencyRatingScaleOverview__list-item"
    >
      <div
        class="tui-competencyRatingScaleOverview__proficientStatus"
      >
        <!--v-if-->
      </div>
      <div
        class="tui-competencyRatingScaleOverview__scaleValue"
      >
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-name"
        >
          Below average
        </p>
        <!--v-if-->
        <span
          class="sr-only"
        >
          [[is_not_proficient_value, totara_competency]]
        </span>
      </div>
    </li>
    <li
      class="tui-competencyRatingScaleOverview__list-item"
    >
      <div
        class="tui-competencyRatingScaleOverview__proficientStatus"
      >
        <!--v-if-->
      </div>
      <div
        class="tui-competencyRatingScaleOverview__scaleValue"
      >
        <p
          class="tui-competencyRatingScaleOverview__scaleValue-name"
        >
          Not competent
        </p>
        <!--v-if-->
        <span
          class="sr-only"
        >
          [[is_not_proficient_value, totara_competency]]
        </span>
      </div>
    </li>
    
  </ol>
</div>
`;
